--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
     <script>
         $(document).ready(function(){
             if ("WebSocket" in window) {
-                ws = new WebSocket("ws://" + document.domain + "/websocket");
+                ws = new WebSocket("ws://" + document.domain + ":8000/websocket");
                 ws.onmessage = function (msg) {
                     var message = JSON.parse(msg.data);
                     $("p#log").html(message.output);
